Fixed text alignment in bottom post.

--- a/src/linda_och_johan.css
+++ b/src/linda_och_johan.css
@@ -111,6 +111,7 @@ h2 {
 .top_icon_wrapper {
   justify-content: center;
   display: flex;
+  height: 8rem;
 }
 
 #toastmasters {
